<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Darkroom Droid</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="timerVal">00:00:00</string>
    
    <string name="pauseButtonLabel">Pause</string>
    <string name="startButtonLabel">Start</string>
    <string name="resetButtonLabel">Reset</string>
    <string name="btnBluetoothToggleLabel">Disconnetti</string>
    <string name="setTimeButtonLabel">Set</string>
    <string name="increaseTimeLabel">+</string>
    <string name="decreaseTimeLabel">-</string>
    
    <string name="focusBtnLabel">FOCUS</string>
    <string name="timeHint">Time</string>

</resources>
